Update readme file.